idea/testData/multiModuleHighlighting/hierarchicalExpectActualMatching/duplicateActualsImplicit/middle/middle.kt
package foo

actual class ActualInMiddleCompatibleInBottom
class <!ACTUAL_MISSING!>CompatibleInMiddleActualInBottom<!>

class <!ACTUAL_MISSING!>CompatibleInMiddleAndBottom<!>